Updated to design

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>MDWBKNY | Mike Wiesenhart | About</title>
+	<title>M D W B K N Y | About</title>
 </head>
 <body>
 	<div class="topnav">
