--- a/school.html
+++ b/school.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>MDWBKNY | Mike Wiesenhart | Coursework</title>
+	<title>M D W B K N Y | Coursework</title>
 </head>
 <body>
 	<div class="topnav">
@@ -14,6 +14,16 @@
 	</div>
 	<div>
 		<h1>School</h1>
+		<h3>General Assembly</h3>
+		<ul>
+			<li>Web Development Immersive</li>
+		</ul>
+		<br>
+		<h3>Hillsborough Community College</h3>
+		<ul>
+			<li>Programming Logic</li>
+			<li>Database Design</li>
+		</li>
 	</div>
 </body>
 </html>
