--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>MDWBKNY | Mike Wiesenhart | My Work</title>
+	<title>M D W B K N Y | My Work</title>
 </head>
 <body>
 	<div class="topnav">
